# Team-Do_Bhai_Dono_Tabahi-call2code

./: .env  .rep  .replit  Dependencies.md  README copy.md  README.md  app.py  dependencies  pyproject.toml  replit.md
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  config  index  shallow
.git copy/logs/: HEAD
.git copy/logs/refs/heads/: main  replit-agent
.git copy/logs/refs/remotes/origin/: main
.git copy/refs/heads/: main
.git copy/refs/remotes/origin/: main
.git copy/refs/replit/: agent-ledger
assets/: indian_stocks.json  translations.json
client/src/: App.tsx  index.css
client/src/components/: Header.tsx  KeyMetrics.tsx  MarketMovers.tsx  MarketOverview.tsx  NewsCard.tsx  Sidebar.tsx  StockChart.tsx  StockSearch.tsx  WatchlistCard.tsx
client/src/lib/: api.ts  utils.ts
client/src/pages/: Dashboard.tsx  Markets.tsx  News.tsx  Portfolio.tsx  StockAnalysis.tsx  Watchlist.tsx
client/src/types/: index.ts
components/: dashboard.py  error_handler.py  loading_widget.py  market_overview.py  multi_user_collaboration.py  news_feed.py  stock_analysis.py  story_mode.py  voice_features.py
server/: routes.ts  storage.ts
server/services/: alphavantage.ts  finnhub.ts  hybrid-market.ts  nse.ts  reliable-market.ts  sentiment.ts  twelvedata.ts  yahoo.ts
shared/: schema.ts
styles/: custom.css
utils/: charts.py  data_fetcher.py  finnhub_news.py  market_facts.py  market_news.py  news_analyzer.py  nse_bse_data.py  speech_handler.py  stock_data.py  technical_analysis.py
