[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "finnhub-python>=2.4.24",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.64",
]
