[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "finnhub-python>=2.4.24",
    "plotly>=6.2.0",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.46.1",
    "textblob>=0.19.0",
    "yfinance>=0.2.64",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
]
